[gd_scene load_steps=16 format=3 uid="uid://cw8jh0ih8voql"]

[ext_resource type="PackedScene" uid="uid://c3cpm0goxpepr" path="res://enemies/enemy.tscn" id="1_igrac"]
[ext_resource type="Script" path="res://enemies/boss_snake.gd" id="2_1pjdc"]
[ext_resource type="Texture2D" uid="uid://dbbv2da0ua0oh" path="res://assets/boss/snake/Snake_Default_Frame01.png" id="2_2aehe"]
[ext_resource type="Texture2D" uid="uid://dq0qfo0x5it73" path="res://assets/snake/Snake_Attack.png" id="3_6enmy"]
[ext_resource type="Texture2D" uid="uid://clnci2hmf3uap" path="res://assets/boss/snake/Snake_Default_Frame02.png" id="3_pk32d"]
[ext_resource type="Texture2D" uid="uid://cpwhhceltospe" path="res://assets/boss/snake/Snake_Default_Frame03.png" id="4_0vap2"]
[ext_resource type="Script" path="res://components/border_bounce_component.gd" id="6_5nt1x"]
[ext_resource type="Script" path="res://components/state_component.gd" id="8_3i8oq"]
[ext_resource type="PackedScene" uid="uid://c6y8fffkus3wn" path="res://projectile/snake_laser.tscn" id="8_8g8p5"]
[ext_resource type="Script" path="res://components/timed_state_componoent.gd" id="9_j3xym"]
[ext_resource type="Script" path="res://components/move_component.gd" id="10_18neo"]
[ext_resource type="Script" path="res://components/spawner_component.gd" id="11_713iw"]

[sub_resource type="SpriteFrames" id="SpriteFrames_fk8hp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_6enmy")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_2aehe")
}, {
"duration": 1.0,
"texture": ExtResource("3_pk32d")
}, {
"duration": 1.0,
"texture": ExtResource("4_0vap2")
}],
"loop": true,
"name": &"default",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_6enmy")
}],
"loop": true,
"name": &"prepare_attack",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_88w72"]
size = Vector2(192, 672)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_26k4j"]
size = Vector2(216, 704)

[node name="BossSnake" instance=ExtResource("1_igrac")]
position = Vector2(1058, 196)
scale = Vector2(0.5, 0.5)
script = ExtResource("2_1pjdc")
laser_duration = 5.0
attack_delay = 1.0

[node name="AnimatedSprite2D" parent="." index="0"]
position = Vector2(0, -2)
sprite_frames = SubResource("SpriteFrames_fk8hp")
animation = &"attack"
autoplay = "default"

[node name="StatsComponent" parent="." index="1"]
health = 70

[node name="VisibleOnScreenNotifier2D" parent="." index="3"]
position = Vector2(1.04904e-05, -104)
scale = Vector2(11.2, 36)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent" index="0"]
position = Vector2(0, -112)
shape = SubResource("RectangleShape2D_88w72")

[node name="State" type="Node" parent="." index="12"]

[node name="MoveState" type="Node" parent="State" index="0"]
unique_name_in_owner = true
script = ExtResource("9_j3xym")
duration = 3.0

[node name="MoveComponent" type="Node" parent="State/MoveState" index="0" node_paths=PackedStringArray("actor")]
script = ExtResource("10_18neo")
actor = NodePath("../../..")

[node name="MoveSideState" type="Node" parent="State" index="1"]
unique_name_in_owner = true
script = ExtResource("9_j3xym")

[node name="MoveSideComponent" type="Node" parent="State/MoveSideState" index="0" node_paths=PackedStringArray("actor")]
unique_name_in_owner = true
script = ExtResource("10_18neo")
actor = NodePath("../../..")

[node name="BorderBounceComponent" type="Node" parent="State/MoveSideState" index="1" node_paths=PackedStringArray("actor", "move_component")]
script = ExtResource("6_5nt1x")
actor = NodePath("../../..")
move_component = NodePath("../MoveSideComponent")

[node name="AttackState" type="Node" parent="State" index="2"]
script = ExtResource("8_3i8oq")

[node name="LaserSpawner" type="Node2D" parent="State/AttackState" index="0"]
unique_name_in_owner = true
script = ExtResource("11_713iw")
scene = ExtResource("8_8g8p5")

[node name="PauseState" type="Node" parent="State" index="3"]
unique_name_in_owner = true
script = ExtResource("9_j3xym")
duration = 3.0

[node name="Timer" type="Timer" parent="." index="13"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LaserHitbox" index="0"]
position = Vector2(0, -104)
shape = SubResource("RectangleShape2D_26k4j")
